src/objects/bizible2__Bizible_Person__c.object
<CustomObject>
    <fields>
        <fullName>SAL_Original_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a SAL Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.SAL_Original_Date__c ),
(bizible2__Lead__r.SAL_Original_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a SAL Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>SAL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAL__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a SAL value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (SAL_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a SAL value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>SAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAO_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a SAO Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.SAO_Date__c),(bizible2__Lead__r.SAO_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a SAO Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>SAO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAO__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a SAO value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (SAO_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a SAO value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>SAO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Contact_ID_for_Bizible_Person__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Gets the value for SFDC Contact ID from the the Contact Object.</description>
        <formula>bizible2__Contact__r.SFDC_Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gets the value for SFDC Contact ID from the the Contact Object.</inlineHelpText>
        <label>SFDC Contact ID for Bizible Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Created_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Date the person was created in Salesforce</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.CreatedDate ),
(bizible2__Lead__r.CreatedDate )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date the person was created in Salesforce</inlineHelpText>
        <label>SFDC Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDC_Lead_ID_for_Bizible_Person__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Gets the value for SFDC Lead ID from the the Lead Object.</description>
        <formula>bizible2__Lead__r.SFDC_Lead_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gets the value for SFDC Lead ID from the the Lead Object.</inlineHelpText>
        <label>SFDC Lead ID for Bizible Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Score__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a Score value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
TEXT(bizible2__Contact__r.mkto71_Lead_Score__c ),
TEXT(bizible2__Lead__r.mkto71_Lead_Score__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a Score value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>SFDC Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a SQL Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF(NOT(ISBLANK ( bizible2__Contact__c )), (bizible2__Contact__r.SQL_Date__c),(bizible2__Lead__r.SQL_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a SQL Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SQL_Original_Date__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a SQL Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.SQL_Original_Date__c ),
(bizible2__Lead__r.SQL_Original_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a SQL Original Date value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>SQL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SQL__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a SQL Date value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</description>
        <formula>NOT ( ISBLANK (SQL_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a SQL Date value from the corresponding field on the Contact Object and marks this field as TRUE it if it exists.</inlineHelpText>
        <label>SQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Industry__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Will populate true if either the related Contact object or Lead object field is marked true</description>
        <formula>IF(NOT(ISBLANK (bizible2__Contact__c)), (bizible2__Contact__r.Target_Industry__c),(bizible2__Lead__r.Target_Industry__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will populate true if either the related Contact object or Lead object field is marked true</inlineHelpText>
        <label>Target Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Persona__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Will populate true if either the related Contact object or Lead object field is marked true</description>
        <formula>IF(NOT(ISBLANK (bizible2__Contact__c)), (bizible2__Contact__r.Target_Persona__c),(bizible2__Lead__r.Target_Persona__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will populate true if either the related Contact object or Lead object field is marked true</inlineHelpText>
        <label>Target Persona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_Territory__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Checks whether there is a US Territory value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</description>
        <formula>IF
(NOT(ISBLANK (bizible2__Contact__c )),
(bizible2__Contact__r.US_Territory_Contact__c ),
(bizible2__Lead__r.US_Territory_Lead__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks whether there is a US Territory value from the corresponding field on either the Contact Object or the Lead Object and copies it if it exists.</inlineHelpText>
        <label>US Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Bizible_Parents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Bizible_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Bizible_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bizible Person</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Person Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bizible Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>